syntax = "proto3";

package api.v1.services.system;

import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
import "system/types.proto";

option go_package = "v1/services/system;system";
option java_multiple_files = true;
option java_outer_classname = "APIServiceSystemResourceProto";
option java_package = "com.origadmin.api.v1.services.system";
option objc_class_prefix = "APIServiceSystemResource";

// The resource service definition.
service ResourceService {
  rpc ListResources (ListResourcesRequest) returns (ListResourcesResponse) {
    option (google.api.http) = {get: "/sys/resources"};
  }
  rpc GetResource (GetResourceRequest) returns (GetResourceResponse) {
    option (google.api.http) = {get: "/sys/resources/{id}"};
  }
  rpc CreateResource (CreateResourceRequest) returns (CreateResourceResponse) {
    option (google.api.http) = {
      post: "/sys/resources"
      body: "resource"
    };
  }
  rpc UpdateResource (UpdateResourceRequest) returns (UpdateResourceResponse) {
    option (google.api.http) = {
      put: "/sys/resources/{resource.id}"
      body: "resource"
    };
  }
  rpc DeleteResource (DeleteResourceRequest) returns (DeleteResourceResponse) {
    option (google.api.http) = {delete: "/sys/resources/{id}"};
  }
}

// ListResourcesRequest is the request for the ResourceService.ListResources method.
message ListResourcesRequest {
  // The parent resource id, for example, "shelves/shelf1".
  int64 id = 1;
  // The current page number.
  int32 current = 2;
  // The maximum number of items to return.
  int32 page_size = 3;
  // The next_page_token value returned from a previous List request, if any.
  string page_token = 4;
  // The no_paging is used to disable pagination.
  bool no_paging = 5;
  // The only_count is the query parameter for set only to query the total number
  bool only_count = 6;
}

// ListResourcesResponse is the response for the ResourceService.ListResources method.
message ListResourcesResponse {
  // The total number of items in the list.
  int32 total_size = 1 [json_name = "total_size"];
  // The paging resources
  repeated Resource resources = 2 [json_name = "resources"];
  // The current page number.
  int32 current = 3 [json_name = "current"];
  // The maximum number of items to return.
  int32 page_size = 4 [json_name = "page_size"];
  // Token to retrieve the next page of results, or empty if there are no
  // more results in the list.
  string next_page_token = 5 [json_name = "next_page_token"];
  // Additional information about this response.
  // content to be added without destroying the current data format
  optional google.protobuf.Any extra = 6 [json_name = "extra"];
}

// GetResourceRequest is the request for the ResourceService.GetResource method.
message GetResourceRequest {
  // The field will contain id of the resource requested, for example:
  // "shelves/shelf1/resources/resource2"
  int64 id = 1;
}

// GetResourceResponse is the response for the ResourceService.GetResource method.
message GetResourceResponse {
  // The field id should match the Noun in the method id.
  Resource resource = 1;
}

// CreateResourceRequest is the request for the ResourceService.CreateResource method.
message CreateResourceRequest {
  // The parent resource id where the resource is to be created.
  string parent = 1;

  // The resource id to use for this resource.
  string resource_id = 3;

  // The resource resource to create.
  // The field id should match the Noun in the method id.
  Resource resource = 2;
}

// CreateResourceResponse is the response for the ResourceService.CreateResource method.
message CreateResourceResponse {
  Resource resource = 1;
}

// UpdateResourceRequest is the request for the ResourceService.UpdateResource method.
message UpdateResourceRequest {
  // The resource resource which replaces the resource on the server.
  Resource resource = 1;
}

// UpdateResourceResponse is the response for the ResourceService.UpdateResource method.
message UpdateResourceResponse {
  Resource resource = 1;
}

// DeleteResourceRequest is the request for the ResourceService.DeleteResource method.
message DeleteResourceRequest {
  // The resource id of the resource to be deleted, for example:
  // "shelves/shelf1/resources/resource2"
  int64 id = 1;
}

// DeleteResourceResponse is the response for the ResourceService.DeleteResource method.
message DeleteResourceResponse {
  // or Resource resource = 1; or google.protobuf.Empty empty = 1;
  google.protobuf.Empty empty = 1;
}
